# axklib

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  README.md  RELEASING.md  architecture.html  build  index.html  mkdocs.yml  native-dependencies.html  package-lock.json  package.json  pyproject.toml  sitemap.xml  vcpkg.json
apps/application/: CMakeLists.txt
apps/application/src/: alteration_journal.cpp  application_operations.cpp  audio_operations.cpp  content_id.cpp  download_archives.cpp  extraction_operations.cpp  extraction_selection.cpp  file_operations.cpp  filesystem.cpp  image_sessions.cpp  jobs.cpp  operation_registry.cpp  package_operations.cpp  path_reservations.cpp  private_storage.cpp  private_storage.hpp  secure_random.cpp  system_service.cpp  uploads.cpp  validation_operations.cpp  volume_graph.cpp  write_operations.cpp
apps/application/tests/: alteration_journal_test.cpp  application_operations_test.cpp  audio_operations_test.cpp  download_archives_test.cpp  extraction_operations_test.cpp  file_operations_test.cpp  filesystem_test.cpp  image_sessions_test.cpp  jobs_test.cpp  operation_registry_test.cpp  package_operations_test.cpp  path_reservations_test.cpp  secure_random_test.cpp  uploads_test.cpp  write_operations_test.cpp
apps/axkdeck/src-tauri/: Cargo.toml  build.rs  build_support.rs  tauri.conf.json
apps/cli/: CMakeLists.txt  app.cpp  app.hpp  command_line.cpp  command_line.hpp  content_id.cpp  content_id.hpp  exit_status.hpp  local_operations.cpp  local_operations.hpp  main.cpp  requests.hpp  writer_commands.cpp  writer_commands.hpp
apps/cli/cmake/: TestUnicodeCli.cmake
apps/cli/commands/: analysis.cpp  extract.cpp  handlers.hpp  legacy.cpp  package.cpp  package_projection.hpp  reports.cpp  reports.hpp  support.cpp  support.hpp  writer.cpp
apps/cli/schema/: export_v1.cpp  export_v1.hpp  info_v1.cpp  info_v1.hpp  objects_v1.cpp  objects_v1.hpp  operations_v1.cpp  operations_v1.hpp  package_v1.cpp  package_v1.hpp  semantic_v1.cpp  semantic_v1.hpp
apps/cli/tests/: cli_parser_test.cpp  cli_schema_test.cpp  object_semantic_dump.cpp  preview_dump.cpp
apps/server/: CMakeLists.txt
apps/server/cmake/: CheckCrowIsolation.cmake
apps/server/contracts/: openapi-v1.base.json  openapi-v1.compatibility.json  openapi-v1.json
apps/server/fuzz/: request_validation_fuzz.cpp
apps/server/sanitizers/: ubsan.supp
apps/server/src/: archive_download_budget.cpp  archive_download_budget.hpp  config.cpp  contract.cpp  contract_generator.cpp  embedded_contract.cpp.in  environment.hpp  event_delivery_budget.cpp  event_dispatcher.cpp  event_tickets.cpp  http_headers.cpp  http_headers.hpp  job_json.cpp  main.cpp  process_lifetime.cpp  request_validation.cpp  server.cpp  telemetry.cpp  workspaces.cpp
apps/server/tests/: archive_download_budget_test.cpp  config_test.cpp  event_delivery_budget_test.cpp  event_dispatcher_test.cpp  event_tickets_test.cpp  http_headers_test.cpp  job_json_test.cpp  process_lifetime_test.cpp  request_validation_test.cpp  server_contract_test.cpp  server_direct_benchmark.cpp  server_fixture.cpp  server_integration_test.py  server_parent_lifetime_test.py  server_performance_test.py  server_resilience_test.py  server_startup_failure_test.py  server_test_harness.py  telemetry_test.cpp  workspaces_test.cpp
cpp/: CMakeLists.txt
cpp/abi/: axklib_c.abi  axklib_c.def  axklib_c.exports  axklib_c.map  axklib_c.symbols
cpp/adapters/: audio_channels.cpp  audio_decode_sndfile.cpp  audio_import.cpp  audio_import_internal.hpp  audio_resample_soxr.cpp  pcm16_quantizer.cpp
cpp/benchmarks/: README.md  workflow_benchmark.cpp
cpp/cli/: app.cpp  command_line.cpp  command_line.hpp  content_id.cpp  content_id.hpp  main.cpp  requests.hpp
cpp/cmake/: AxkWarnings.cmake  CheckExportedSymbols.cmake  GenerateAbiExports.cmake  RunConsumerTest.cmake  TestAbiExportGenerator.cmake  axklib.pc.in  axklibConfig.cmake.in
cpp/fuzz/: fuzz_envelopes.hpp  manifest_fuzz.cpp  manifest_parser_fuzz.cpp  media_fuzz.cpp  media_record_fuzz.cpp  object_fuzz.cpp  object_header_fuzz.cpp  sfs_fuzz.cpp  sfs_image_fuzz.cpp  sfs_sections_fuzz.cpp  sfs_seed_builder.cpp  typed_object_fuzz.cpp
cpp/src/: alteration.cpp  audio.cpp  audio_export.cpp  bytes.cpp  c_api.cpp  error.cpp  io.cpp  media.cpp  object.cpp  relationship.cpp  report.cpp  semantic.cpp  sfs.cpp  utf8.cpp  version.cpp  writer.cpp  writer_image.cpp
cpp/tests/: alteration_test.cpp  audio_export_test.cpp  audio_import_test.cpp  audio_test.cpp  bytes_test.cpp  c_api_test.cpp  c_consumer.c  catalog_test.cpp  cli_parser_test.cpp  cli_schema_test.cpp  effect_dump.cpp  effects_test.cpp  hardening_test.cpp  io_test.cpp  large_image_memory_test.cpp  media_semantic_dump.cpp  media_test.cpp  object_test.cpp  oracle_baseline_test.cpp  report_test.cpp  sfs_semantic_dump.cpp  sfs_test.cpp  utf8_test.cpp  version_test.cpp  writer_test.cpp
cpp/tools/: README.md  generate_current_effects.py  generate_current_fields.py  generate_current_lookups.py
docs/: architecture.md  fuzzing.md  index.md  licensing-and-relinking.md  native-dependencies.md  pyproject.toml
docs/axklib/: alteration.md  audio.md  c-api.md  cdrom.md  cli-json-schemas.md  cli.md  compatibility.md  containers.md  cpp-api.md  floppy.md  glossary.md  graph.md  index.md  media.md  migration.md  model.md  names-and-paths.md  objects.md  portable-package-v1.schema.json  portable-packages.md  relationships.md  report-schemas.md  reports.md  sampler-data.md  security.md  server.md  sfs-filesystem.md  sfz.md  typical-usage.md  versioning.md  write.md
docs/stylesheets/: axklib-material.css
oracle/python/: README.md  pyproject.toml
tools/python/: README.md  check_benchmark.py  check_production_boundary.py  collect_lgpl_sources.py  desktop_release.py  generate_current_effects.py  generate_current_fields.py  generate_current_lookups.py  generate_sbom.py  inspect_package.py  native_build_cache.py  openapi_compat.py  pyproject.toml  release_metadata.py  release_server_smoke.py  version_metadata.py
(+403 files in other folders)
