[project]
name = "axklib"
version = "0.0.0"
description = "Yamaha A-series disk image and sampler object tooling."
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [{ name = "tphzz" }]
keywords = ["yamaha", "sampler", "disk-image", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.13"
dependencies = [
    "pycdlib>=1.14.0",
    "pyfatfs>=1.1.0",
    # pyfatfs imports pkg_resources, which setuptools 81+ no longer provides.
    "setuptools<81",
]

[project.scripts]
axklib = "axklib.cli:main"
axklib-docs = "axklib.docs_cli:main"

[project.urls]
Homepage = "https://github.com/tphzz/axklib"
Documentation = "https://tphzz.github.io/axklib/"
Repository = "https://github.com/tphzz/axklib"
Issues = "https://github.com/tphzz/axklib/issues"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.31.0",
    "pymdown-extensions>=11.0.1",
]

[build-system]
# Keep the isolated build backend on a pkg_resources-providing setuptools release.
requires = ["setuptools>=80,<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axklib*"]

